[UPDATE] The word is displayed in uppercase and with space between every charater

--- a/pendu.html
+++ b/pendu.html
@@ -21,11 +21,11 @@
               
               <button id='randomnumber'>Nouveau mot</button>
                            
-              <div id="word">
+              <div id="word" class="mt-5">
                 Le mot 
               </div>
-              <div id="test">
-                Le mot 
+              <div id="test" class="mt-5">
+                Le mot pour TEST
               </div>
             </div>
           </div>
