#[FIXED] the input for same letters has been fixed

--- a/pendu.html
+++ b/pendu.html
@@ -25,7 +25,7 @@
           <div id="test">
             Le mot
             <input type="text" id='findWord'/>
-            <button id='jcpas' class='mt-3'>jcpas</button>
+            <button id='validateLetter' class='mt-3'>Valider la lettre</button>
           </div>
           <button id='randomnumber' class='mt-3'>Nouveau mot</button>
         </div>
