[ADDED] draw has been added

--- a/pendu.html
+++ b/pendu.html
@@ -24,8 +24,11 @@
           
           <div id="test">
             Le mot
-            <input type="text" id='findWord'/>
+            <input type="text" id='findWord' maxlength=1 />
             <button id='validateLetter' class='mt-3'>Valider la lettre</button>
+          </div>
+          <div id="dessin" class='row justify-content-center mt-3' >
+           
           </div>
           <button id='randomnumber' class='mt-3'>Nouveau mot</button>
         </div>
