--- a/pendu.html
+++ b/pendu.html
@@ -22,10 +22,9 @@
             Le mot
           </div>
           
-          <div id="test">
-            Le mot
-            <input type="text" id='findWord' maxlength=1 />
-            <button id='validateLetter' class='mt-3'>Valider la lettre</button>
+          <div id="test" class="mt-5">
+            <input type="text" id='findWord' placeholder='Entrez une lettre' maxlength=1 />
+            <button id='validateLetter' class="mt-0 btn-sm btn-warning">Valider</button>
           </div>
           <div id="dessin" class='row justify-content-center mt-3' >
            
