--- a/pendu.html
+++ b/pendu.html
@@ -29,9 +29,8 @@
           <div id='message' class=''>
           
           </div>
-          <div id="dessin" class='row justify-content-center mt-3' >
-           
-          </div>
+          <div id="dessin" class='row justify-content-center mt-3' ></div>
+          <div id='messageRound'></div>
           <button id='randomnumber' class='mt-3'>Nouveau mot</button>
         </div>
 
