[FIXED] the bug for launching new game has been fixed

--- a/pendu.html
+++ b/pendu.html
@@ -31,13 +31,9 @@
           </div>
           <div id="dessin" class='row justify-content-center mt-3' ></div>
           <div id='messageRound'></div>
-          <button id='randomnumber' class='mt-3'>Nouveau mot</button>
+          <button id='randomnumber' class='mt-3'>Nouvelle partie</button>
         </div>
-
     </div>
-
-
-
   </div>
   <script src="pendu.js"></script>
 </body>
