[ADD] new rules has been added

--- a/pendu.html
+++ b/pendu.html
@@ -18,6 +18,8 @@
         <p>- Essaie de trouver les lettres manquantes du mot</p>
         <p>- Tu as droit à 8 échecs au-delà tu seras pendu et le jeu sera Game Over</p>
         <p>- Tu as droit à 10 tours maximum pour trouver le mot, au-delà ce sera Game Over</p>
+        <p>- Si tu penses avoir trouver le mot entier alors tu peux le rentrer dans la case approprié, 
+          cependant si tu échoues tu perds la partie indépendamment du nombre d'erreurs et de coups! Fais bien attention!</p>
       </div>
         
     
