--- a/pendu.html
+++ b/pendu.html
@@ -13,8 +13,8 @@
   <div class="container">
 
 
-      <div class=''>
-        <h3 class='mb-3'>Règles du jeu</h3>
+      <div class='text-center'>
+        <h3 class='mb-3 mt-3'>Règles du jeu</h3>
         <p>- Essaie de trouver les lettres manquantes du mot</p>
         <p>- Tu as droit à 8 échecs au-delà tu seras pendu et le jeu sera Game Over</p>
         <p>- Tu as droit à 10 tours maximum pour trouver le mot, au-delà ce sera Game Over</p>
@@ -46,7 +46,7 @@
           <div id='message' class=''></div>
           <div id="dessin" class='row justify-content-center mt-3' ></div>
           <div id='messageRound'></div>
-          <button id='randomnumber' class='mt-3'>Nouvelle partie</button>
+          <button id='randomnumber' class='mt-3 mb-5'>Nouvelle partie</button>
         </div>
 
   </div>
