--- a/pendu.html
+++ b/pendu.html
@@ -28,7 +28,7 @@
 
         <div class="text-center">
           <h1 class="mt-5">Pendu</h1>
-          <div id="word" class="mt-5 mb-3 ">
+          <div id="word" class="mt-5 mb-2 ">
             Le mot
           </div>
           
@@ -36,6 +36,8 @@
             <input type="text" id='findLetter' placeholder='Entrez une lettre' maxlength=1 />
             <button id='validateLetter' class="mt-0 btn-sm btn-warning ">Valider</button>
           </div>
+
+          <div class="mt-3 text-center fw-bold" id='olderLetters'></div>
 
           <div class="mt-5">
             <input type="text" id='findWord' placeholder="Entrez le mot entier" />
