--- a/pendu.html
+++ b/pendu.html
@@ -33,8 +33,8 @@
           </div>
           
           <div class="mt-5">
-            <input type="text" id='findLetter' placeholder='Entrez une lettre' maxlength=1 />
-            <button id='validateLetter' class="mt-0 btn-sm btn-warning ">Valider</button>
+            <input type="text" id='findLetter' placeholder='Entrez une lettre' maxlength=1 style="width:150px"/>
+            <button id='validateLetter' class="mt-0 btn-sm btn-warning">Valider</button>
           </div>
 
           <div class="mt-3 text-center fw-bold" id='olderLetters'></div>
